# ntub_112403

./: 0518需求模型.pptx  111-2_系統簡介-1.docx  111-2_系統簡介.docx  4-1甘特圖.xlsx  README.md  STP.docx  STP0422.docx  STP0428.docx  SWOT0428.docx  dump-trip-202307261510  dump-trip-202307261540  dump-trip-202307271723  dump-trip-202307272253  dump-trip-202308141657  五力分析0429.docx  使用者需求.docx  前言0522.rtf  動機.docx  動機稿子.rtf  動機稿子更動.rtf  可行性分析.docx  商業模式0421.docx  問卷圖表0430.xlsx  問卷圖表0501.xlsx  四技第 112403 組-趣放假-系統簡介.docx  四技第112403組-趣放假-海報簡介.docx  專題動機.docx  專題報告＿第三章報告稿.docx  專題手冊-背景.docx  專題手冊.docx  市場技術可行性0423.docx  市場需求可行性0430.docx  市場需求可行性0501.docx  技術可行性.docx  技術可行性0501.docx  技術可行性0504-2.docx  技術可行性0504.docx  文字稿0523.docx  演算法順序描述.txt  物件圖敘述0430.docx  (+23 more)
code/: .gitignore  dump-trip-202307242151  dump-trip-202308171545  get_taipei.py  pyproject.toml  建立行程相關資料表.xlsx  景點type.xlsx  景點營業時間.xlsx  樂華夜市_popular_有擁擠資訊  欄位翻譯_google api  臺北市松山區三民路.json
code/attrations/: get_info.py  get_taipei.py  新北市中和區景平路.json  臺北市區路段資料.csv  臺北市士林區中庸一路景點.json  臺北市士林區中庸二路景點擁擠資訊.json  臺北市士林區中庸五路景點.json  臺北市士林區中正路景點擁擠資訊.json  臺北市士林區中華路景點.json  臺北市士林區中華路景點營業時間.json  臺北市士林區仁民路景點.json  臺北市士林區仁民路景點擁擠資訊.json  臺北市士林區仁民路景點營業時間.json  臺北市士林區光華路景點.json  臺北市士林區光華路景點擁擠資訊.json  臺北市士林區光華路景點營業時間.json  臺北市士林區克強路景點營業時間.json  臺北市士林區塔悠路景點營業時間.json  臺北市松山區三民路.json  臺北市松山區三民路景點.json  臺北市松山區三民路景點擁擠資訊.json  臺北市松山區健康路景點.json  臺北市松山區光復南路景點.json  臺北市松山區光復南路景點擁擠資訊.json  臺北市松山區八德路景點.json  臺北市松山區八德路景點擁擠資訊.json  臺北市松山區北寧路景點.json  臺北市松山區北寧路景點擁擠資訊.json  臺北市松山區南京東路景點.json  臺北市松山區南京東路景點擁擠資訊.json  臺北市松山區吉祥路景點.json  臺北市松山區吉祥路景點擁擠資訊.json  臺北市松山區基隆路景點.json  臺北市松山區基隆路景點擁擠資訊.json  臺北景點.json  臺北景點擁擠資訊.json  臺北景點營業時間.json
code/backupDB/: bar-dump-trip-202312041750  bar-dump-trip-202312042345  bar_dump-trip-202312031518  dump-trip-202307260011  (+18 more)
(+264 files in other folders)
