[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["ZiYun <10946010@ntub.edu.tw>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2"
googlemaps = "^4.10.0"
populartimes = {git = "https://github.com/m-wrzr/populartimes"}
python-dotenv = "^1.0.0"
django-bootstrap5 = "^23.1"
django-bootstrap-v5 = "^1.0.11"
psycopg2 = "^2.9.6"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"


[tool.poetry.group.dev.dependencies]
djlint = "^1.23.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
